fix: whitespace and spinners in purchase / enlist pop ups

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@ h1 {
   font-weight: 400;
   color: rgba(0,0,0,0.7);
   font-family: 'Titillium Web', sans-serif;
+  line-height: 1.5;
 }
 
 h2 {
